# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org>:

    Make sure we list all config files in rc help output.

  22 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Only open /proc/cmdline if it exists, #189686 thanks to Christian Affolter.

  21 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Fix pppd getting the interface metric.

* baselayout-2.0.0_rc3 (20 Aug 2007)

  20 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    As discussed on the -dev ml, RC_DEPEND_STRICT now defaults to yes.

  17 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Stop un-needed services when changing runlevels, #189050.

  15 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    `config /etc/fstab' can now be used in depend() functions to show that
    the deptree should be regenerated if /etc/fstab has changed.
    Add bzr port 4155 to /etc/services, #188970 thanks to Andrew Cowie.

  08 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Add help to rc-update #188170.
    If given a pidfile, just match on that for seeing if we have crashed
    or not, #186159.

* baselayout-2.0.0_rc2 (04 Aug 2007)

  04 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Boot properly when we cannot set an early font, #187628.
    rc-update works again, #187487.

  03 Aug 2007; Roy Marples <uberlord@gentoo.org>:

    Fix adding multiple IP addresses, #187526.
    Fix static IPv6 routes, #187514.

* baselayout-2.0.0_rc1 (02 Aug 2007)

  01 Aug 2007; Mike Frysinger <vapier@gentoo.org>:

    Punt /dev/shm from default /etc/fstab as we handle it and add a helpful
    hint about the RC_USE_FSTAB option.

  31 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    All our binaries are now multicalls into rc, which makes our on disk size
    a lot smaller.

  23 Jul 2007; Roy Marples <uberlord@gentoo.org>:

    appending noinitd=xdm will skip the xdm service when first booting, #181858.
