@@ -6,5 +6,3 @@ LDPATH="/usr/local/lib"
 MANPATH="/usr/local/share/man:/usr/share/man"
 INFOPATH="/usr/share/info"
 CVS_RSH="ssh"
-PAGER="/usr/bin/less"
-LESSOPEN="|lesspipe.sh %s"
