@@ -1,0 +1,4 @@
+DIR   = /etc/profile.d
+
+TOPDIR = ../..
+include $(TOPDIR)/default.mk
