@@ -6,12 +6,7 @@
 
 UNICODE="no"
 
-# Set EDITOR to your preferred editor.
-# You may use something other than what is listed here.
-
-EDITOR="/bin/nano"
-#EDITOR="/usr/bin/vim"
-#EDITOR="/usr/bin/emacs"
+# You should set EDITOR and PAGER in a file in /etc/profile.d/ like "base.sh".
 
 # XSESSION is a new variable to control what window manager to start
 # default with X if run with xdm, startx or xinit.  The default behavior
